Add all of Ivan's changes
- Full copy of all custom layers
- Mod BEAKL to swap NUM and MEDIA layer thumb trigger keys
- Improve layer name strings
- Lay foundations for future game layer

--- a/.github/workflows/build-corne-ish_zen_BEAKL.yml
+++ b/.github/workflows/build-corne-ish_zen_BEAKL.yml
@@ -1,14 +1,11 @@
-# Copyright 2021 Manna Harbour
+# Copyright 2022 Manna Harbour
 # https://github.com/manna-harbour/miryoku
 
-name: 'Test Build'
-on:
-  push:
-  pull_request:
-  workflow_dispatch:
+name: 'Build corne-ish_zen BEAKL'
+on: workflow_dispatch
 jobs:
   build:
-    if: github.repository_owner == 'issmirnov'
+    # uses: issmirnov/zmk-config-miryoku/.github/workflows/main.yml@master
     uses: ./.github/workflows/main.yml
     secrets: inherit
     with:
