disable display, to debug sleep issue

--- a/config/corne-ish_zen.conf
+++ b/config/corne-ish_zen.conf
@@ -8,3 +8,6 @@
 
 # Disable layer indicator widget.
 # CONFIG_CUSTOM_WIDGET_LAYER_STATUS=n
+
+# Disable display, to debug sleep issue
+CONFIG_ZMK_DISPLAY=n
