--- a/.github/workflows/build-corne-ish_zen_BEAKL.yml
+++ b/.github/workflows/build-corne-ish_zen_BEAKL.yml
@@ -9,9 +9,12 @@ jobs:
     uses: ./.github/workflows/main.yml
     secrets: inherit
     with:
-      board: '["corneish_zen_v1_left","corneish_zen_v1_right"]'
+      board: '[
+          "corneish_zen_v1_left","corneish_zen_v1_right",
+          "corneish_zen_v2_left","corneish_zen_v2_right"
+        ]'
       alphas: '["BEAKL15"]'
       clipboard: '["mac"]'
       custom_config: '["#define MIRYOKU_KLUDGE_MOUSEKEYSPR"]'
       kconfig: '["CONFIG_ZMK_DISPLAY_HIDE_MOMENTARY_LAYERS=n\nCONFIG_CUSTOM_WIDGET_LAYER_STATUS_HIDE_HEADING=y\nCONFIG_CUSTOM_WIDGET_LOGO_IMAGE_MIRYOKU=y\nCONFIG_IL0323_INVERT=y\nCONFIG_ZMK_MOUSE=y"]'
-      branches: '["caksoylar/zmk/caksoylar/zen-v1+v2 ftc/zmk/mouse-ftc"]'
+      branches: '["caksoylar/zmk/caksoylar/zen-v1+v2 urob/zmk/mouse-3.2"]'
