Add qwerty to main build

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -13,5 +13,5 @@ jobs:
     secrets: inherit
     with:
       board: '["corneish_zen_v1_left","corneish_zen_v1_right"]'
-      alphas: '["BEAKL15"]'
+      alphas: '["QWERTY"]'
       clipboard: '["mac"]'
